rename env vars from *VERCEL* to *WEB*

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ DEV_SEED_PHRASE="test-test-test-test-test-test-test-test-test-test-test-junk"
 # Default local variables
 LOCAL_HASURA_PORT=8080
 LOCAL_POSTGRES_PORT=5432
-LOCAL_VERCEL_PORT=3000
+LOCAL_WEB_PORT=3000
 LOCAL_POSTGRES_USER=postgres
 LOCAL_POSTGRES_PASSWORD=postgrespassword
 LOCAL_POSTGRES_DATABASE=postgres
@@ -23,8 +23,7 @@ LOCAL_HASURA_ADMIN_SECRET=admin-secret
 
 CI_HASURA_PORT=8081
 CI_POSTGRES_PORT=4321
-CI_VERCEL_PORT=3001
-CI_VERCEL_TOKEN=abc123
+CI_WEB_PORT=3001
 
 # Hardhat
 HARDHAT_CHAIN_ID=1337
