--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -63,13 +63,12 @@ jobs:
       REACT_APP_INFURA_PROJECT_ID: 275c8fc2ec294d6aac6bfc881d9a9dff
       CI_HASURA_PORT: 8081
       CI_POSTGRES_PORT: 4321
-      CI_VERCEL_TOKEN: ${{ secrets.CI_VERCEL_TOKEN }}
-      CI_VERCEL_PORT: 3001
+      CI_WEB_PORT: 3001
       HASURA_EVENT_SECRET: event-secret
       HASURA_GRAPHQL_ADMIN_SECRET: admin-secret
       HASURA_GRAPHQL_ENDPOINT: http://localhost:8081
       LOCAL_POSTGRES_PORT: 5432
-      LOCAL_VERCEL_PORT: 3000
+      LOCAL_WEB_PORT: 3000
       LOCAL_POSTGRES_USER: postgres
       LOCAL_POSTGRES_PASSWORD: postgrespassword
       LOCAL_POSTGRES_DATABASE: postgres
