update formatting of existing metadata files

--- a/hasura/metadata/databases/default/tables/public_circle_share_tokens.yaml
+++ b/hasura/metadata/databases/default/tables/public_circle_share_tokens.yaml
@@ -1,59 +1,59 @@
 table:
-  name: circle_share_tokens
   schema: public
+  name: circle_share_tokens
 object_relationships:
-- name: circle
-  using:
-    foreign_key_constraint_on: circle_id
+  - name: circle
+    using:
+      foreign_key_constraint_on: circle_id
 insert_permissions:
-- permission:
-    backend_only: false
-    check:
-      circle:
-        deleted_at:
-          _is_null: true
-        users:
-          _and:
-          - profile:
-              id:
-                _eq: X-Hasura-User-Id
-          - role:
-              _eq: 1
-    columns:
-    - circle_id
-    - type
-  role: user
+  - role: user
+    permission:
+      check:
+        circle:
+          users:
+            _and:
+              - profile:
+                  id:
+                    _eq: X-Hasura-User-Id
+              - role:
+                  _eq: 1
+          deleted_at:
+            _is_null: true
+      columns:
+        - circle_id
+        - type
+      backend_only: false
 select_permissions:
-- permission:
-    columns:
-    - circle_id
-    - type
-    - created_at
-    - updated_at
-    - uuid
-    filter:
-      circle:
-        deleted_at:
-          _is_null: true
-        users:
-          _and:
-          - profile:
-              id:
-                _eq: X-Hasura-User-Id
-          - role:
-              _eq: 1
-  role: user
+  - role: user
+    permission:
+      columns:
+        - circle_id
+        - type
+        - created_at
+        - updated_at
+        - uuid
+      filter:
+        circle:
+          users:
+            _and:
+              - profile:
+                  id:
+                    _eq: X-Hasura-User-Id
+              - role:
+                  _eq: 1
+          deleted_at:
+            _is_null: true
 delete_permissions:
-- permission:
-    filter:
-      circle:
-        deleted_at:
-          _is_null: true
-        users:
-          _and:
-          - profile:
-              id:
-                _eq: X-Hasura-User-Id
-          - role:
-              _eq: 1
-  role: user
+  - role: user
+    permission:
+      filter:
+        circle:
+          users:
+            _and:
+              - profile:
+                  id:
+                    _eq: X-Hasura-User-Id
+              - role:
+                  _eq: 1
+          deleted_at:
+            _is_null: true
