--- a/hasura/metadata/databases/default/tables/public_interaction_events.yaml
+++ b/hasura/metadata/databases/default/tables/public_interaction_events.yaml
@@ -1,30 +1,30 @@
 table:
-  name: interaction_events
   schema: public
+  name: interaction_events
 event_triggers:
-- definition:
-    enable_manual: false
-    insert:
-      columns: "*"
-  headers:
-  - name: verification_key
-    value_from_env: HASURA_EVENT_SECRET
-  name: sendInteractionEventToAmplitude
-  retry_conf:
-    interval_sec: 3600
-    num_retries: 5
-    timeout_sec: 60
-  webhook: "{{HASURA_API_BASE_URL}}/event_triggers/eventManager"
-- definition:
-    enable_manual: false
-    insert:
-      columns: "*"
-  headers:
-  - name: verification_key
-    value_from_env: HASURA_EVENT_SECRET
-  name: sendInteractionEventToMixpanel
-  retry_conf:
-    interval_sec: 3600
-    num_retries: 5
-    timeout_sec: 60
-  webhook: "{{HASURA_API_BASE_URL}}/event_triggers/eventManager"
+  - name: sendInteractionEventToAmplitude
+    definition:
+      enable_manual: false
+      insert:
+        columns: '*'
+    retry_conf:
+      num_retries: 5
+      interval_sec: 3600
+      timeout_sec: 60
+    webhook: '{{HASURA_API_BASE_URL}}/event_triggers/eventManager'
+    headers:
+      - name: verification_key
+        value_from_env: HASURA_EVENT_SECRET
+  - name: sendInteractionEventToMixpanel
+    definition:
+      enable_manual: false
+      insert:
+        columns: '*'
+    retry_conf:
+      num_retries: 5
+      interval_sec: 3600
+      timeout_sec: 60
+    webhook: '{{HASURA_API_BASE_URL}}/event_triggers/eventManager'
+    headers:
+      - name: verification_key
+        value_from_env: HASURA_EVENT_SECRET
