--- a/hasura/metadata/databases/default/tables/public_teammates.yaml
+++ b/hasura/metadata/databases/default/tables/public_teammates.yaml
@@ -1,50 +1,50 @@
 table:
-  name: teammates
   schema: public
+  name: teammates
 object_relationships:
-- name: teammate
-  using:
-    manual_configuration:
-      column_mapping:
-        team_mate_id: id
-      insertion_order: null
-      remote_table:
-        name: users
-        schema: public
-- name: user
-  using:
-    manual_configuration:
-      column_mapping:
-        user_id: id
-      insertion_order: null
-      remote_table:
-        name: users
-        schema: public
+  - name: teammate
+    using:
+      manual_configuration:
+        remote_table:
+          schema: public
+          name: users
+        insertion_order: null
+        column_mapping:
+          team_mate_id: id
+  - name: user
+    using:
+      manual_configuration:
+        remote_table:
+          schema: public
+          name: users
+        insertion_order: null
+        column_mapping:
+          user_id: id
 select_permissions:
-- permission:
-    columns:
-    - id
-    - team_mate_id
-    - user_id
-    - created_at
-    - updated_at
-    filter:
-      user:
-        profile:
-          id:
-            _eq: X-Hasura-User-Id
-  role: user
+  - role: user
+    permission:
+      columns:
+        - id
+        - team_mate_id
+        - user_id
+        - created_at
+        - updated_at
+      filter:
+        user:
+          profile:
+            id:
+              _eq: X-Hasura-User-Id
 event_triggers:
-- definition:
-    delete:
-      columns: "*"
-    enable_manual: false
-  headers:
-  - name: verification_key
-    value_from_env: HASURA_EVENT_SECRET
-  name: removeTeammate
-  retry_conf:
-    interval_sec: 10
-    num_retries: 5
-    timeout_sec: 60
-  webhook: "{{HASURA_API_BASE_URL}}/event_triggers/eventManager"
+  - name: removeTeammate
+    definition:
+      enable_manual: false
+      delete:
+        columns: '*'
+    retry_conf:
+      num_retries: 5
+      interval_sec: 10
+      timeout_sec: 60
+    webhook: '{{HASURA_API_BASE_URL}}/event_triggers/eventManager'
+    headers:
+      - name: verification_key
+        value_from_env: HASURA_EVENT_SECRET
