--- a/hasura/metadata/databases/default/tables/public_burns.yaml
+++ b/hasura/metadata/databases/default/tables/public_burns.yaml
@@ -1,32 +1,32 @@
 table:
-  name: burns
   schema: public
+  name: burns
 object_relationships:
-- name: circle
-  using:
-    foreign_key_constraint_on: circle_id
-- name: epoch
-  using:
-    foreign_key_constraint_on: epoch_id
-- name: user
-  using:
-    foreign_key_constraint_on: user_id
+  - name: circle
+    using:
+      foreign_key_constraint_on: circle_id
+  - name: epoch
+    using:
+      foreign_key_constraint_on: epoch_id
+  - name: user
+    using:
+      foreign_key_constraint_on: user_id
 select_permissions:
-- permission:
-    columns:
-    - id
-    - user_id
-    - epoch_id
-    - circle_id
-    - tokens_burnt
-    - regift_percent
-    - original_amount
-    - created_at
-    - updated_at
-    filter:
-      circle:
-        users:
-          profile:
-            id:
-              _eq: X-Hasura-User-Id
-  role: user
+  - role: user
+    permission:
+      columns:
+        - id
+        - user_id
+        - epoch_id
+        - circle_id
+        - tokens_burnt
+        - regift_percent
+        - original_amount
+        - created_at
+        - updated_at
+      filter:
+        circle:
+          users:
+            profile:
+              id:
+                _eq: X-Hasura-User-Id
