--- a/hasura/metadata/databases/default/tables/public_circle_integrations.yaml
+++ b/hasura/metadata/databases/default/tables/public_circle_integrations.yaml
@@ -1,45 +1,45 @@
 table:
-  name: circle_integrations
   schema: public
+  name: circle_integrations
 object_relationships:
-- name: circle
-  using:
-    foreign_key_constraint_on: circle_id
+  - name: circle
+    using:
+      foreign_key_constraint_on: circle_id
 insert_permissions:
-- permission:
-    backend_only: false
-    check:
-      circle:
-        users:
-          _and:
-          - role:
-              _eq: 1
-          - address:
-              _eq: X-Hasura-Address
-    columns:
-    - circle_id
-    - data
-    - name
-    - type
-  role: user
+  - role: user
+    permission:
+      check:
+        circle:
+          users:
+            _and:
+              - role:
+                  _eq: 1
+              - address:
+                  _eq: X-Hasura-Address
+      columns:
+        - circle_id
+        - data
+        - name
+        - type
+      backend_only: false
 select_permissions:
-- permission:
-    columns:
-    - circle_id
-    - id
-    - data
-    - name
-    - type
-    filter: {}
-  role: user
+  - role: user
+    permission:
+      columns:
+        - circle_id
+        - id
+        - data
+        - name
+        - type
+      filter: {}
 delete_permissions:
-- permission:
-    filter:
-      circle:
-        users:
-          _and:
-          - role:
-              _eq: 1
-          - address:
-              _eq: X-Hasura-Address
-  role: user
+  - role: user
+    permission:
+      filter:
+        circle:
+          users:
+            _and:
+              - role:
+                  _eq: 1
+              - address:
+                  _eq: X-Hasura-Address
