--- a/hasura/metadata/databases/default/tables/public_circle_private.yaml
+++ b/hasura/metadata/databases/default/tables/public_circle_private.yaml
@@ -1,28 +1,28 @@
 table:
-  name: circle_private
   schema: public
+  name: circle_private
 object_relationships:
-- name: circle
-  using:
-    manual_configuration:
-      column_mapping:
-        circle_id: id
-      insertion_order: null
-      remote_table:
-        name: circles
-        schema: public
+  - name: circle
+    using:
+      manual_configuration:
+        remote_table:
+          schema: public
+          name: circles
+        insertion_order: null
+        column_mapping:
+          circle_id: id
 select_permissions:
-- permission:
-    columns:
-    - circle_id
-    - discord_webhook
-    filter:
-      circle:
-        users:
-          _and:
-          - role:
-              _eq: 1
-          - profile:
-              id:
-                _eq: X-Hasura-User-Id
-  role: user
+  - role: user
+    permission:
+      columns:
+        - circle_id
+        - discord_webhook
+      filter:
+        circle:
+          users:
+            _and:
+              - role:
+                  _eq: 1
+              - profile:
+                  id:
+                    _eq: X-Hasura-User-Id
