--- a/hasura/metadata/databases/default/tables/public_claims.yaml
+++ b/hasura/metadata/databases/default/tables/public_claims.yaml
@@ -1,77 +1,77 @@
 table:
-  name: claims
   schema: public
+  name: claims
 object_relationships:
-- name: distribution
-  using:
-    foreign_key_constraint_on: distribution_id
-- name: profile
-  using:
-    manual_configuration:
-      column_mapping:
-        profile_id: id
-      insertion_order: null
-      remote_table:
-        name: profiles
-        schema: public
+  - name: distribution
+    using:
+      foreign_key_constraint_on: distribution_id
+  - name: profile
+    using:
+      manual_configuration:
+        remote_table:
+          schema: public
+          name: profiles
+        insertion_order: null
+        column_mapping:
+          profile_id: id
 insert_permissions:
-- permission:
-    backend_only: false
-    check:
-      distribution:
-        _and:
-        - created_by:
-            _eq: X-Hasura-User-Id
-        - epoch:
-            circle:
-              deleted_at:
-                _is_null: true
-    columns:
-    - address
-    - amount
-    - id
-    - index
-    - new_amount
-    - profile_id
-    - proof
-  role: user
-select_permissions:
-- permission:
-    allow_aggregations: true
-    columns:
-    - address
-    - amount
-    - created_at
-    - distribution_id
-    - id
-    - index
-    - new_amount
-    - profile_id
-    - proof
-    - txHash
-    - updated_at
-    filter:
-      _or:
-      - profile:
-          id:
-            _eq: X-Hasura-User-Id
-      - distribution:
-          epoch:
-            circle:
-              users:
-                _and:
-                - deleted_at:
+  - role: user
+    permission:
+      check:
+        distribution:
+          _and:
+            - created_by:
+                _eq: X-Hasura-User-Id
+            - epoch:
+                circle:
+                  deleted_at:
                     _is_null: true
-                - profile:
-                    id:
-                      _eq: X-Hasura-User-Id
-  role: user
+      columns:
+        - address
+        - amount
+        - id
+        - index
+        - new_amount
+        - profile_id
+        - proof
+      backend_only: false
+select_permissions:
+  - role: user
+    permission:
+      columns:
+        - address
+        - amount
+        - created_at
+        - distribution_id
+        - id
+        - index
+        - new_amount
+        - profile_id
+        - proof
+        - txHash
+        - updated_at
+      filter:
+        _or:
+          - profile:
+              id:
+                _eq: X-Hasura-User-Id
+          - distribution:
+              epoch:
+                circle:
+                  users:
+                    _and:
+                      - deleted_at:
+                          _is_null: true
+                      - profile:
+                          id:
+                            _eq: X-Hasura-User-Id
+      allow_aggregations: true
 update_permissions:
-- permission:
-    check: null
-    columns:
-    - txHash
-    filter:
-      profile_id:
-        _eq: X-Hasura-User-Id
-  role: user
+  - role: user
+    permission:
+      columns:
+        - txHash
+      filter:
+        profile_id:
+          _eq: X-Hasura-User-Id
+      check: null
