--- a/hasura/metadata/databases/default/tables/public_contributions.yaml
+++ b/hasura/metadata/databases/default/tables/public_contributions.yaml
@@ -1,68 +1,68 @@
 table:
-  name: contributions
   schema: public
+  name: contributions
 object_relationships:
-- name: epoch
-  using:
-    foreign_key_constraint_on: epoch_id
-- name: user
-  using:
-    foreign_key_constraint_on: user_id
+  - name: epoch
+    using:
+      foreign_key_constraint_on: epoch_id
+  - name: user
+    using:
+      foreign_key_constraint_on: user_id
 insert_permissions:
-- permission:
-    backend_only: false
-    check:
-      _and:
-      - user:
-          profile:
-            id:
-              _eq: X-Hasura-User-Id
-      - _or:
-        - epoch_id:
-            _is_null: true
-        - epoch:
-            ended:
-              _eq: false
-    columns:
-    - description
-    - epoch_id
-    - user_id
-  role: user
+  - role: user
+    permission:
+      check:
+        _and:
+          - user:
+              profile:
+                id:
+                  _eq: X-Hasura-User-Id
+          - _or:
+              - epoch_id:
+                  _is_null: true
+              - epoch:
+                  ended:
+                    _eq: false
+      columns:
+        - description
+        - epoch_id
+        - user_id
+      backend_only: false
 select_permissions:
-- permission:
-    allow_aggregations: true
-    columns:
-    - id
-    - epoch_id
-    - user_id
-    - description
-    - deleted_at
-    - created_at
-    - updated_at
-    filter:
-      user:
-        circle:
-          users:
-            profile:
-              id:
-                _eq: X-Hasura-User-Id
-  role: user
+  - role: user
+    permission:
+      columns:
+        - id
+        - epoch_id
+        - user_id
+        - description
+        - deleted_at
+        - created_at
+        - updated_at
+      filter:
+        user:
+          circle:
+            users:
+              profile:
+                id:
+                  _eq: X-Hasura-User-Id
+      allow_aggregations: true
 update_permissions:
-- permission:
-    check: null
-    columns:
-    - deleted_at
-    - description
-    filter:
-      _and:
-      - user:
-          profile:
-            id:
-              _eq: X-Hasura-User-Id
-      - _or:
-        - epoch_id:
-            _is_null: true
-        - epoch:
-            ended:
-              _eq: false
-  role: user
+  - role: user
+    permission:
+      columns:
+        - deleted_at
+        - description
+      filter:
+        _and:
+          - user:
+              profile:
+                id:
+                  _eq: X-Hasura-User-Id
+          - _or:
+              - epoch_id:
+                  _is_null: true
+              - epoch:
+                  ended:
+                    _eq: false
+      check: null
