--- a/hasura/metadata/databases/default/tables/public_pending_vault_transactions.yaml
+++ b/hasura/metadata/databases/default/tables/public_pending_vault_transactions.yaml
@@ -1,67 +1,67 @@
 table:
-  name: pending_vault_transactions
   schema: public
+  name: pending_vault_transactions
 object_relationships:
-- name: distribution
-  using:
-    foreign_key_constraint_on: distribution_id
-- name: organization
-  using:
-    foreign_key_constraint_on: org_id
-- name: profile
-  using:
-    foreign_key_constraint_on: created_by
-- name: vault_tx_type
-  using:
-    foreign_key_constraint_on: tx_type
+  - name: distribution
+    using:
+      foreign_key_constraint_on: distribution_id
+  - name: organization
+    using:
+      foreign_key_constraint_on: org_id
+  - name: profile
+    using:
+      foreign_key_constraint_on: created_by
+  - name: vault_tx_type
+    using:
+      foreign_key_constraint_on: tx_type
 insert_permissions:
-- permission:
-    backend_only: false
-    check:
-      _or:
-      - org_id:
-          _is_null: true
-      - organization:
-          circles:
-            _and:
-            - deleted_at:
-                _is_null: true
-            - users:
+  - role: user
+    permission:
+      check:
+        _or:
+          - org_id:
+              _is_null: true
+          - organization:
+              circles:
                 _and:
-                - profile:
-                    id:
-                      _eq: X-Hasura-User-Id
-                - role:
-                    _eq: 1
-                - deleted_at:
-                    _is_null: true
-    columns:
-    - chain_id
-    - claim_id
-    - distribution_id
-    - org_id
-    - tx_hash
-    - tx_type
-    set:
-      created_by: x-hasura-User-Id
-  role: user
+                  - deleted_at:
+                      _is_null: true
+                  - users:
+                      _and:
+                        - profile:
+                            id:
+                              _eq: X-Hasura-User-Id
+                        - role:
+                            _eq: 1
+                        - deleted_at:
+                            _is_null: true
+      set:
+        created_by: x-hasura-User-Id
+      columns:
+        - chain_id
+        - claim_id
+        - distribution_id
+        - org_id
+        - tx_hash
+        - tx_type
+      backend_only: false
 select_permissions:
-- permission:
-    columns:
-    - chain_id
-    - claim_id
-    - created_by
-    - org_id
-    - distribution_id
-    - tx_hash
-    - tx_type
-    filter:
-      created_by:
-        _eq: X-Hasura-User-Id
-  role: user
+  - role: user
+    permission:
+      columns:
+        - chain_id
+        - claim_id
+        - created_by
+        - org_id
+        - distribution_id
+        - tx_hash
+        - tx_type
+      filter:
+        created_by:
+          _eq: X-Hasura-User-Id
 delete_permissions:
-- permission:
-    filter:
-      created_by:
-        _eq: X-Hasura-User-Id
-  role: user
+  - role: user
+    permission:
+      filter:
+        created_by:
+          _eq: X-Hasura-User-Id
