--- a/hasura/metadata/databases/default/tables/public_profiles.yaml
+++ b/hasura/metadata/databases/default/tables/public_profiles.yaml
@@ -1,103 +1,103 @@
 table:
-  name: profiles
   schema: public
+  name: profiles
 array_relationships:
-- name: users
-  using:
-    manual_configuration:
-      column_mapping:
-        address: address
-      insertion_order: null
-      remote_table:
-        name: users
-        schema: public
-- name: vault_transactions
-  using:
-    foreign_key_constraint_on:
-      column: created_by
-      table:
-        name: vault_transactions
-        schema: public
-- name: vaults
-  using:
-    foreign_key_constraint_on:
-      column: created_by
-      table:
-        name: vaults
-        schema: public
+  - name: users
+    using:
+      manual_configuration:
+        remote_table:
+          schema: public
+          name: users
+        insertion_order: null
+        column_mapping:
+          address: address
+  - name: vault_transactions
+    using:
+      foreign_key_constraint_on:
+        column: created_by
+        table:
+          schema: public
+          name: vault_transactions
+  - name: vaults
+    using:
+      foreign_key_constraint_on:
+        column: created_by
+        table:
+          schema: public
+          name: vaults
 select_permissions:
-- permission:
-    columns:
-    - avatar
-    - background
-    - bio
-    - created_at
-    - discord_username
-    - github_username
-    - id
-    - medium_username
-    - skills
-    - telegram_username
-    - twitter_username
-    - updated_at
-    - website
-    filter:
-      users:
-        circle:
-          api_keys:
-            _and:
-            - hash:
-                _eq: X-Hasura-Api-Key-Hash
-            - read_member_profiles:
-                _eq: true
-    limit: 50
-  role: api-user
-- permission:
-    columns:
-    - address
-    - avatar
-    - background
-    - bio
-    - created_at
-    - discord_username
-    - github_username
-    - id
-    - medium_username
-    - skills
-    - telegram_username
-    - twitter_username
-    - updated_at
-    - website
-    filter:
-      _or:
-      - users:
+  - role: api-user
+    permission:
+      columns:
+        - avatar
+        - background
+        - bio
+        - created_at
+        - discord_username
+        - github_username
+        - id
+        - medium_username
+        - skills
+        - telegram_username
+        - twitter_username
+        - updated_at
+        - website
+      filter:
+        users:
           circle:
-            organization:
-              circles:
-                users:
-                  profile:
-                    id:
-                      _eq: X-Hasura-User-Id
-      - id:
-          _eq: X-Hasura-User-Id
-  role: user
+            api_keys:
+              _and:
+                - hash:
+                    _eq: X-Hasura-Api-Key-Hash
+                - read_member_profiles:
+                    _eq: true
+      limit: 50
+  - role: user
+    permission:
+      columns:
+        - address
+        - avatar
+        - background
+        - bio
+        - created_at
+        - discord_username
+        - github_username
+        - id
+        - medium_username
+        - skills
+        - telegram_username
+        - twitter_username
+        - updated_at
+        - website
+      filter:
+        _or:
+          - users:
+              circle:
+                organization:
+                  circles:
+                    users:
+                      profile:
+                        id:
+                          _eq: X-Hasura-User-Id
+          - id:
+              _eq: X-Hasura-User-Id
 update_permissions:
-- permission:
-    check: null
-    columns:
-    - avatar
-    - background
-    - bio
-    - discord_username
-    - github_username
-    - medium_username
-    - skills
-    - telegram_username
-    - twitter_username
-    - website
-    filter:
-      id:
-        _eq: X-Hasura-User-Id
-    set:
-      id: X-Hasura-User-Id
-  role: user
+  - role: user
+    permission:
+      columns:
+        - avatar
+        - background
+        - bio
+        - discord_username
+        - github_username
+        - medium_username
+        - skills
+        - telegram_username
+        - twitter_username
+        - website
+      filter:
+        id:
+          _eq: X-Hasura-User-Id
+      check: null
+      set:
+        id: X-Hasura-User-Id
