--- a/hasura/metadata/databases/default/tables/public_protocols.yaml
+++ b/hasura/metadata/databases/default/tables/public_protocols.yaml
@@ -1,45 +1,45 @@
 table:
-  name: protocols
   schema: public
+  name: protocols
 configuration:
-  custom_column_names: {}
-  custom_name: organizations
   custom_root_fields: {}
+  custom_name: organizations
+  custom_column_names: {}
 array_relationships:
-- name: circles
-  using:
-    manual_configuration:
-      column_mapping:
-        id: protocol_id
-      insertion_order: null
-      remote_table:
-        name: circles
-        schema: public
-- name: vaults
-  using:
-    foreign_key_constraint_on:
-      column: org_id
-      table:
-        name: vaults
-        schema: public
+  - name: circles
+    using:
+      manual_configuration:
+        remote_table:
+          schema: public
+          name: circles
+        insertion_order: null
+        column_mapping:
+          id: protocol_id
+  - name: vaults
+    using:
+      foreign_key_constraint_on:
+        column: org_id
+        table:
+          schema: public
+          name: vaults
 select_permissions:
-- permission:
-    columns:
-    - created_at
-    - id
-    - logo
-    - name
-    - updated_at
-    filter:
-      circles:
-        _and:
-        - deleted_at:
-            _is_null: true
-        - users:
-            _and:
-            - profile:
-                id:
-                  _eq: X-Hasura-User-Id
+  - role: user
+    permission:
+      columns:
+        - created_at
+        - id
+        - logo
+        - name
+        - updated_at
+      filter:
+        circles:
+          _and:
             - deleted_at:
                 _is_null: true
-  role: user
+            - users:
+                _and:
+                  - profile:
+                      id:
+                        _eq: X-Hasura-User-Id
+                  - deleted_at:
+                      _is_null: true
