--- a/hasura/metadata/databases/default/tables/public_token_gifts.yaml
+++ b/hasura/metadata/databases/default/tables/public_token_gifts.yaml
@@ -1,69 +1,69 @@
 table:
-  name: token_gifts
   schema: public
+  name: token_gifts
 object_relationships:
-- name: circle
-  using:
-    foreign_key_constraint_on: circle_id
-- name: epoch
-  using:
-    foreign_key_constraint_on: epoch_id
-- name: gift_private
-  using:
-    manual_configuration:
-      column_mapping:
-        id: gift_id
-      insertion_order: null
-      remote_table:
-        name: gift_private
-        schema: public
-- name: recipient
-  using:
-    foreign_key_constraint_on: recipient_id
-- name: sender
-  using:
-    foreign_key_constraint_on: sender_id
+  - name: circle
+    using:
+      foreign_key_constraint_on: circle_id
+  - name: epoch
+    using:
+      foreign_key_constraint_on: epoch_id
+  - name: gift_private
+    using:
+      manual_configuration:
+        remote_table:
+          schema: public
+          name: gift_private
+        insertion_order: null
+        column_mapping:
+          id: gift_id
+  - name: recipient
+    using:
+      foreign_key_constraint_on: recipient_id
+  - name: sender
+    using:
+      foreign_key_constraint_on: sender_id
 select_permissions:
-- permission:
-    columns:
-    - circle_id
-    - created_at
-    - dts_created
-    - epoch_id
-    - id
-    - recipient_id
-    - sender_id
-    - tokens
-    - updated_at
-    filter:
-      circle:
-        api_keys:
-          _and:
-          - hash:
-              _eq: X-Hasura-Api-Key-Hash
-          - read_pending_token_gifts:
-              _eq: true
-          - read_epochs:
-              _eq: true
-  role: api-user
-- permission:
-    allow_aggregations: true
-    columns:
-    - circle_id
-    - created_at
-    - dts_created
-    - epoch_id
-    - id
-    - recipient_address
-    - recipient_id
-    - sender_address
-    - sender_id
-    - tokens
-    - updated_at
-    filter:
-      circle:
-        users:
-          profile:
-            id:
-              _eq: X-Hasura-User-Id
-  role: user
+  - role: api-user
+    permission:
+      columns:
+        - circle_id
+        - created_at
+        - dts_created
+        - epoch_id
+        - id
+        - recipient_id
+        - sender_id
+        - tokens
+        - updated_at
+      filter:
+        circle:
+          api_keys:
+            _and:
+              - hash:
+                  _eq: X-Hasura-Api-Key-Hash
+              - read_pending_token_gifts:
+                  _eq: true
+              - read_epochs:
+                  _eq: true
+  - role: user
+    permission:
+      columns:
+        - circle_id
+        - created_at
+        - dts_created
+        - epoch_id
+        - id
+        - recipient_address
+        - recipient_id
+        - sender_address
+        - sender_id
+        - tokens
+        - updated_at
+      filter:
+        circle:
+          users:
+            profile:
+              id:
+                _eq: X-Hasura-User-Id
+      allow_aggregations: true
