--- a/hasura/metadata/databases/default/tables/public_vault_transactions.yaml
+++ b/hasura/metadata/databases/default/tables/public_vault_transactions.yaml
@@ -1,43 +1,43 @@
 table:
-  name: vault_transactions
   schema: public
+  name: vault_transactions
 object_relationships:
-- name: circle
-  using:
-    foreign_key_constraint_on: circle_id
-- name: distribution
-  using:
-    foreign_key_constraint_on: distribution_id
-- name: profile
-  using:
-    foreign_key_constraint_on: created_by
-- name: vault
-  using:
-    foreign_key_constraint_on: vault_id
-- name: vault_tx_type
-  using:
-    foreign_key_constraint_on: tx_type
+  - name: circle
+    using:
+      foreign_key_constraint_on: circle_id
+  - name: distribution
+    using:
+      foreign_key_constraint_on: distribution_id
+  - name: profile
+    using:
+      foreign_key_constraint_on: created_by
+  - name: vault
+    using:
+      foreign_key_constraint_on: vault_id
+  - name: vault_tx_type
+    using:
+      foreign_key_constraint_on: tx_type
 select_permissions:
-- permission:
-    columns:
-    - circle_id
-    - created_at
-    - created_by
-    - distribution_id
-    - id
-    - tx_hash
-    - tx_type
-    - updated_at
-    - vault_id
-    filter:
-      vault:
-        protocol:
-          circles:
-            users:
-              _and:
-              - profile:
-                  id:
-                    _eq: X-Hasura-User-Id
-              - deleted_at:
-                  _is_null: true
-  role: user
+  - role: user
+    permission:
+      columns:
+        - circle_id
+        - created_at
+        - created_by
+        - distribution_id
+        - id
+        - tx_hash
+        - tx_type
+        - updated_at
+        - vault_id
+      filter:
+        vault:
+          protocol:
+            circles:
+              users:
+                _and:
+                  - profile:
+                      id:
+                        _eq: X-Hasura-User-Id
+                  - deleted_at:
+                      _is_null: true
