--- a/hasura/metadata/databases/default/tables/public_vault_transactions.yaml
+++ b/hasura/metadata/databases/default/tables/public_vault_transactions.yaml
@@ -32,7 +32,7 @@ select_permissions:
         - vault_id
       filter:
         vault:
-          protocol:
+          organization:
             circles:
               users:
                 _and:
