--- a/hasura/metadata/databases/default/tables/public_vaults.yaml
+++ b/hasura/metadata/databases/default/tables/public_vaults.yaml
@@ -5,7 +5,7 @@ object_relationships:
   - name: profile
     using:
       foreign_key_constraint_on: created_by
-  - name: protocol
+  - name: organization
     using:
       foreign_key_constraint_on: org_id
 array_relationships:
