Rename protocols to organizations (#1371)
* update hasura tables

* update actions

* Create up migration

wip

finish migration

* rename protocol -> org in app

* regnerate zeus

* Update scripts with rename

* Remove unused protocolName ref

* Write down migration

* Add restart helper yarn command

* remove dup

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -444,7 +444,7 @@ custom_types:
       relationships:
         - remote_table:
             schema: public
-            name: protocols
+            name: organizations
           name: org
           source: default
           type: object
