--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "docker:start": "docker compose --profile dev up -d",
     "docker:stop": "docker compose --profile dev down",
     "docker:clean": "docker compose --profile dev down -v",
+    "docker:restart": "yarn docker:stop && yarn docker:start",
     "cy:dev": "yarn test:ci --cypress-only --local",
     "cy:run": "yarn test:ci --cypress-only",
     "start": "./scripts/serve.sh",
