new allocate workflow

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@stitches/react": "1.2.6",
     "@storybook/react": "^6.4.19",
     "@typeform/embed-react": "^1.18.0",
+    "@types/react-helmet": "^6.1.5",
     "@web3-react/core": "6.1.9",
     "@web3-react/injected-connector": "6.0.7",
     "@web3-react/walletconnect-connector": "6.2.13",
@@ -64,6 +65,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-force-graph-2d": "1.23.8",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.27.0",
     "react-icons": "^4.3.1",
     "react-query": "3.34.8",
