adding contributions fk object relationship to users

--- a/hasura/metadata/databases/default/tables/public_contributions.yaml
+++ b/hasura/metadata/databases/default/tables/public_contributions.yaml
@@ -42,3 +42,4 @@ select_permissions:
                     _eq: X-Hasura-User-Id
           - deleted_at:
               _is_null: true
+      allow_aggregations: true
