Members page updates (#1382)
* Update nav for members and admin (#1324)

* add Admin button to CircleNav and rearrange

* remove add circle and settings button from members

* fix mobile add members bug

* Circle members header (#1328)

* getNominationsData from hasura

* Make MembersPage available for members

* Add nominations button and columns permission

* add members and nominees count

* reposition buttons on mobile view

* fix button spacing in mobile view

Co-authored-by: Wing <100873710+wingfeatherwave@users.noreply.github.com>

* Nominees section of circle members (#1344)

* remove VouchingPage and its components

* Add NomineeTable and NomineeRow

* move getActiveNominees  to members page

* restyling of membersPage after adding NomineeTable

* remove console statement

* Main merge into members update page (#1356)

main merge

* Merge main branch into members-page-updates for icons (#1368)

* fix Avatar's css prop type

* fix lag when typing notes during allocation (#1338)

simple fix: just wrap updateLocalGift in useCallback

* Fix/mobile map is not responsive to touch (#1261)

* update Radix popover

* Replace MuiDrawer with radix popover

* fix filter button position

* increase overview menu zIndex

* revert popover update

* fix header position

* Fix Discord Webhook circle setting issue  (#1340)

* update discord_webhook controller default value

* revert hasura changes and check edited field

* Fix fields alignment in distribution form (#1330)

Co-authored-by: crabsinger <83605543+crabsinger@users.noreply.github.com>
Co-authored-by: Wing <100873710+wingfeatherwave@users.noreply.github.com>

* Fix: typos (#1342)

Fix: typos

* Fix: minor typos (#1331)

Fix: minor typos

Co-authored-by: crabsinger <83605543+crabsinger@users.noreply.github.com>

* Add Interaction_Events table and reporting (#1339)

* more cleanup

* interaction_events and amplitude trigger to fire

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -121,6 +121,15 @@ actions:
           value_from_env: HASURA_EVENT_SECRET
     permissions:
       - role: user
+  - name: deleteContribution
+    definition:
+      kind: synchronous
+      handler: '{{HASURA_API_BASE_URL}}/actions/actionManager'
+      headers:
+      - name: verification_key
+        value_from_env: HASURA_EVENT_SECRET
+    permissions:
+    - role: user
   - name: deleteUser
     definition:
       kind: synchronous
