Add functionality for creating new contributions
Created contributions are now seamlessly folded into the
updateContribution pattern, including save notifications

--- a/hasura/metadata/databases/default/tables/public_contributions.yaml
+++ b/hasura/metadata/databases/default/tables/public_contributions.yaml
@@ -12,16 +12,20 @@ insert_permissions:
   - role: user
     permission:
       check:
-        circle:
-          users:
-            profile:
-              id:
-                _eq: X-Hasura-User-Id
-      set:
-        user_id: x-hasura-User-Id
+        _and:
+          - circle:
+              users:
+                profile:
+                  id:
+                    _eq: X-Hasura-User-Id
+          - user:
+              profile:
+                id:
+                  _eq: X-Hasura-User-Id
       columns:
         - circle_id
         - description
+        - user_id
 select_permissions:
   - role: user
     permission:
