undo owner address removal

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,7 @@ HARDHAT_PORT=8545
 HARDHAT_GANACHE_CHAIN_ID=1338
 HARDHAT_GANACHE_PORT=8546
 HARDHAT_FORK_BLOCK=13500000
+HARDHAT_OWNER_ADDRESS=0xYOUR_DEV_ADDRESS
 TEST_ON_HARDHAT_NODE=
 
 # HASURA_GRAPHQL auto used by hasura CLI (used with ./hasura/config.yaml)
