--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,9 @@ LOCAL_POSTGRES_PASSWORD=postgrespassword
 LOCAL_POSTGRES_DATABASE=postgres
 LOCAL_HASURA_ADMIN_SECRET=admin-secret
 
+# Enable local logging
+# DEV_LOGGING=true
+
 CI_HASURA_PORT=8081
 CI_POSTGRES_PORT=4321
 CI_WEB_PORT=3001
