--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@stitches/react": "1.2.6",
     "@storybook/react": "^6.4.19",
     "@typeform/embed-react": "^1.18.0",
+    "@types/morgan": "^1.9.3",
     "@types/react-helmet": "^6.1.5",
     "@web3-react/core": "6.1.9",
     "@web3-react/injected-connector": "6.0.7",
@@ -59,6 +60,7 @@
     "lodash": "4.17.21",
     "luxon": "2.3.1",
     "mixpanel": "^0.17.0",
+    "morgan": "^1.10.0",
     "node-fetch": "2.6.7",
     "notistack": "1.0.10",
     "papaparse": "^5.3.2",
