Overview page: toggle display of my/all circles (#1464)
* toggle display of my/all circles in overview page

* add mounting ease transition

Co-authored-by: Wing <100873710+wingfeatherwave@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-query": "3.34.8",
     "react-router-dom": "6.2.1",
     "react-string-replace": "0.4.4",
+    "react-transition-group": "^4.4.5",
     "react-virtualized-auto-sizer": "1.0.5",
     "recoil": "0.4.1",
     "sharp": "^0.30.5",
