Setup Gitpod for instant ready to use dev environments (#1413)
Co-authored-by: Lawrence Wang <l@lw.io>

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-# Shared Environment
-LOCAL_SEED_ADDRESS=0xYOUR_DEV_ADDRESS
+# Change this to your own address (this is first address of below mnemonic).
+LOCAL_SEED_ADDRESS=0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
+# Note: use dashes instead of spaces for mnemonic since bash parses spaces incorrectly
+DEV_SEED_PHRASE="test-test-test-test-test-test-test-test-test-test-test-junk"
+
 REACT_APP_INFURA_PROJECT_ID=infuraidhere
 ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/infuraidhere
 GOERLI_RPC_URL=https://goerli.infura.io/v3/infuraidhere
@@ -9,8 +12,6 @@ IMAGE_DIR=assets/static/images/
 # separate allowed domains with commas
 SIWE_ALLOWED_DOMAINS=localhost:3000,
 
-# Note: use dashes instead of spaces for mnemonic since bash parses spaces incorrectly
-DEV_SEED_PHRASE="test-test-test-test-test-test-test-test-test-test-test-junk"
 
 # Default local variables
 LOCAL_HASURA_PORT=8080
